tests/rosetta/out/Rust/average-loop-length.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/average-loop-length.rs:43:30
   |
43 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
43 |         while (s.len() as i32) < width {
   |               +              +

error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/average-loop-length.rs:50:30
   |
50 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
50 |         while (s.len() as i32) < width {
   |               +              +

warning: unnecessary parentheses around assigned value
  --> /tmp/average-loop-length.rs:84:21
   |
84 |             term *= (i / nn);
   |                     ^      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
84 -             term *= (i / nn);
84 +             term *= i / nn;
   |

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/average-loop-length.rs:10:19
   |
10 |         return (x.parse::<i32>().unwrap()).parse::<f64>().unwrap();
   |                   ^^^^^ method not found in `f64`

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:15:35
   |
15 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:15:31
   |
15 |             if &s[i as usize..i + 1 as usize] == ch {
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/average-loop-length.rs:15:33
   |
15 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:25:31
   |
25 |         let mut dot = indexOf(s, ".");
   |                       ------- ^ expected `&str`, found `String`
   |                       |
   |                       arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/average-loop-length.rs:12:8
   |
12 |     fn indexOf(s: &'static str, ch: &'static str) -> i32 {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
25 |         let mut dot = indexOf(&s, ".");
   |                               +

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:31:42
   |
31 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                          ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:31:36
   |
31 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                    ^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/average-loop-length.rs:31:40
   |
31 |                 s = &s[0 as usize..dot + 5 as usize];
   |                                        ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:31:21
   |
24 |         let mut s = y.to_string();
   |                     ------------- expected due to this value
...
31 |                 s = &s[0 as usize..dot + 5 as usize];
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |
help: try using a conversion method
   |
31 |                 s = (&s[0 as usize..dot + 5 as usize]).to_string();
   |                     +                                +++++++++++++

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:39:16
   |
22 |     fn fmtF(x: f64) -> &'static str {
   |                        ------------ expected `&'static str` because of return type
...
39 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
39 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:46:16
   |
41 |     fn padInt(n: i32, width: i32) -> &'static str {
   |                                      ------------ expected `&'static str` because of return type
...
46 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
46 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/average-loop-length.rs:51:17
   |
51 |             s = format!("{}{}", " ", s);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/average-loop-length.rs:76:21
   |
76 |         return (sum.parse::<f64>().unwrap()) / tests as f64;
   |                     ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
57 |         let mut sum: i32 = 0;
   |                    +++++

error[E0599]: no method named `parse` found for type `i32` in the current scope
  --> /tmp/average-loop-length.rs:79:24
   |
79 |         let mut nn = n.parse::<f64>().unwrap();
   |                        ^^^^^ method not found in `i32`

warning: variable does not need to be mutable
  --> /tmp/average-loop-length.rs:99:17
   |
99 | ...   let mut line = format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", padI...
   |           ----^^^^
   |           |
   |           help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 16 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0308, E0599, E0689.
For more information about an error, try `rustc --explain E0277`.
